Closed Bug 32294 Opened 24 years ago Closed 24 years ago

MyISP config default AnimLogo URL is wrong in MyISP build.

Categories

(CCK Graveyard :: CCK-Wizard, defect, P3)

x86
Windows NT

Tracking

(Not tracked)

VERIFIED FIXED

People

(Reporter: bmartin, Assigned: vparthas)

Details

(Whiteboard: [Candidacy Approved] 2 hours)

Latest CCK build dated: 03-17-00

O/S: WinNT4.0

Steps to reproduce:
1. Install CCK
2. Launch CCK
3. Choose the MyISP configuration
4. Do not change any of the customization options.
5. Create MyISP build
6. Install MyISP build
7. Select the Animated Logo to go to the URL

Results:

the URL that gets picked up in the build is:

file:///D|/Program%20Files?Netscape/MyISPconfig/chrome/navigator/content/default
/www.myisp.com

Expected:

www.myisp.com
Status: NEW → ASSIGNED
Whiteboard: [Candidacy Approved] 2 hours
Target Milestone: M15
marking fixed.
The installer will check for the http:// protocol and if missing will insert it 
in front of the URL. 
also the anim logo url is not a pref not a dtd entity
browser.throbber.url in all.js and all-ns.js
Status: ASSIGNED → RESOLVED
Closed: 24 years ago
Resolution: --- → FIXED
Marking this Verified Fixed.
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.