fix for bug #32294 - the animated logo url is obtained from the chrome if http:// is missing - therefore the installer checks for it and if missing inserts it